# Telco-Customer-Churn

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: train.csv
src/: data.py  evaluate.py  features.py  metrics.py  train.py  validation.py
tests/: test_e2e.py  test_unit.py
